finished CH10 function

--- a/10-Functions/starter/index.html
+++ b/10-Functions/starter/index.html
@@ -40,7 +40,7 @@
   </head>
   <body>
     <div>
-      <h1>A Closer Look at Functions</h1>
+      <h1 class="title">A Closer Look at Functions</h1>
     </div>
     <button class="buy">Buy new plane 🛩</button>
     <button class="poll">Answer poll ⁉️</button>
