--- a/13-Advanced-DOM-Bankist/starter/index.html
+++ b/13-Advanced-DOM-Bankist/starter/index.html
@@ -22,7 +22,8 @@
           class="nav__logo"
           id="logo"
           designer="robin"
-          data-version-number="3.0"
+          data-version-number="3.1"
+          data-group="ssid"
         />
         <ul class="nav__links">
           <li class="nav__item">
