Finshed CH09 sec

--- a/03-Developer-Skills/final/index.html
+++ b/03-Developer-Skills/final/index.html
@@ -4,17 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>How JavaScript Works Behind the Scenes</title>
+    <title>Developer Skills & Editor Setup</title>
     <style>
-      * {
-        margin: 0;
-        /* padding: 0;
-        box-sizing: inherit; */
-      }
-      html {
-        font-size: 62.5%;
-        box-sizing: border-box;
-      }
       body {
         height: 100vh;
         display: flex;
@@ -33,7 +24,7 @@
     </style>
   </head>
   <body>
-    <h1>How JavaScript Works Behind the Scenes</h1>
+    <h1>Developer Skills & Editor Setup</h1>
     <script src="script.js"></script>
   </body>
 </html>
