--- a/04-HTML-CSS/final/index.html
+++ b/04-HTML-CSS/final/index.html
@@ -18,13 +18,11 @@
     </p>
 
     <h2>Another heading</h2>
-    <p class="second">
-      Just another paragraph
-    </p>
+    <p class="second">Just another paragraph</p>
 
     <img
       id="course-image"
-      src="https://img-a.udemycdn.com/course/480x270/437398_46c3_9.jpg"
+      src="https://www.udemy.com/staticx/udemy/js/webpack/coding-exercises-demo-preview-desktop.2957bed27c3ae43a02824b61ad9cda03.png"
     />
 
     <form id="your-name">
