--- a/05-Guess-My-Number/starter/index.html
+++ b/05-Guess-My-Number/starter/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css" />
     <title>Guess My Number!</title>
   </head>
+
   <body>
     <header>
       <h1>Guess My Number!</h1>
@@ -16,7 +17,7 @@
     </header>
     <main>
       <section class="left">
-        <input type="number" class="guess" />
+        <input type="number" min="1" max="20" class="guess" />
         <button class="btn check">Check!</button>
       </section>
       <section class="right">
